// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SortButtonIcon should display arrow down when sort is descending 1`] = `
<DocumentFragment>
  <svg
    class="lucide lucide-arrow-up"
    fill="none"
    focusable="false"
    height="16"
    stroke="#60666E"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m5 12 7-7 7 7"
    />
    <path
      d="M12 19V5"
    />
  </svg>
</DocumentFragment>
`;

exports[`SortButtonIcon should display arrow up when sort is ascending 1`] = `
<DocumentFragment>
  <svg
    class="lucide lucide-arrow-down"
    fill="none"
    focusable="false"
    height="16"
    stroke="#60666E"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 5v14"
    />
    <path
      d="m19 12-7 7-7-7"
    />
  </svg>
</DocumentFragment>
`;

exports[`SortButtonIcon should display reorder when no sort 1`] = `
<DocumentFragment>
  <svg
    class="lucide lucide-chevrons-up-down"
    fill="none"
    focusable="false"
    height="16"
    stroke="#60666E"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m7 15 5 5 5-5"
    />
    <path
      d="m7 9 5-5 5 5"
    />
  </svg>
</DocumentFragment>
`;
